Tag branches/1.3 r3115 as tags/1.3.17